fix(theme): Fix list element text align

--- a/packages/saber-theme-aimer/src/styles/components/_page.scss
+++ b/packages/saber-theme-aimer/src/styles/components/_page.scss
@@ -94,6 +94,7 @@
     ol, ul {
       margin-bottom: $gap-m;
       padding-left: $gap-m * 1.5;
+      text-align: justify;
 
       p {
         margin-bottom: 0;
